crates/flowlog-build/tests/errors/stratifier/forward_reference.dl
.decl Edge(x: int32, y: int32)
.decl A(x: int32, y: int32)
.decl B(x: int32, y: int32)
.input Edge(IO="file", filename="Edge.csv", delimiter=",")
.output A
A(x, y) :- B(x, y).
fixpoint {
    B(x, y) :- Edge(x, y).
    B(x, z) :- Edge(x, y), B(y, z).
}
